Spotify Client details

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-SPOTIFY_CLIENT_ID='6fec39fdb81f435f89a18b95a39bd5ec'
-SPOTIFY_CLIENT_SECRET='05f3acc04eda4b61a7a73e678d95dcad'
-SPOTIFY_REDIRECT_URI = 'https://multiplaylists.herokuapp.com/auth/callback'
+SPOTIFY_CLIENT_ID='YOUR_CLIENT_ID'
+SPOTIFY_CLIENT_SECRET='YOUR_CLIENT_SECRET'
+# SPOTIFY_REDIRECT_URI = 'https://multiplaylists.herokuapp.com/auth/callback'
+SPOTIFY_REDIRECT_URI = 'http://localhost:5000/auth/callback'
